Fixed horizontal scrolling on small devices

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -46,7 +46,8 @@
 
 
 @media (max-width: 992px) {
-  body{
-    padding:15px;
+  .user-show{
+    padding:40px;
   }
+
 }
